<resources>
    <string name="app_name">Vinsol-meeting-app</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="no_data_available">No Data Available</string>
    <string name="schedule_company_meeting">Schedule Company Meeting</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="submit">Submit</string>
</resources>
